chore added executable file to bin